tests/compile_failures/too_many_args_splitbits.rs
use splitbits::*;

fn main() {
    splitbits!(min=u8, 0b11011101, "aaabbccc", whatisthisthing);
}
